--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,35 +1,29 @@
-<p id="notice"><%= notice %></p>
+<h2 align = "center ">BOOKS LIST</h2>
+<div class="row">
+		<% @books.each do |book| %>
+			  <div class="col-sm-6 col-md-4">
+				  <div class="thumbnail">
+					<div id="contPic">
+					  <%= image_tag book.image, :size => '242x200', class:"img-thumbnail" %>
+				 	 </div>
+				 	 <div class="caption">
+						<h4 align="center"><%=  link_to book.title , book_path(book) %></h4>
+						<p> Title: <%= book.title %></p>
+						<p> Author: <%= book.author %></p>
+						<p> price: <%= euro book.price %></p>
+						<p> Category: # <%= book.category %></p>
 
-<h1>Listing Books</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Price</th>
-      <th>Category</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= book.price %></td>
-        <td><%= book.category %></td>
-        <td><%= book.image %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+						<div class=" well product-action">
+							<% if signed_in? and @current_customer.admin? %>
+								<%= link_to 'Edit', edit_book_path(book), class: "btn btn-md btn-success" %>
+								<%= link_to 'Delete ', book, method: :delete, data: {confirm: "Are you sure ? "},class: "btn btn-md btn-danger" %>
+							<%end%>
+							<% if signed_in? %>
+								<%= link_to 'Add to cart', lineitems_path(book_id: book), class: "btn btn-md btn-primary ", method: :post %>
+							<%end%>
+					</div>
+				</div>
+			</div>
+		</div>
+	<%end%>
+</div>
