--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,29 +1,59 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="well col-xs-10 col-xs-offset-1">
+    <div class="thumbnail">
+      <%= image_tag @book.image, :size => '200x200' %>
+      <div class="caption">
+        <h3 class = "center"> <%= @book.title %> </h3>
+        <p>Author : <%= @book.author %> </p>
+        <p>Category: <%= @book.category %></p>
+        <p>Price : <%= euro @book.price %></p>
+      </div>
+      <div class="product-action">
+        <%= link_to 'View all books', books_path, class: "btn btn-md btn-success" %>
+        <%= link_to 'Edit this book', edit_book_path(@book), class: "btn btn-md btn-primary" %>
+			  <%= link_to 'Delete this product', book_path(@book), method: :delete,
+						data: {confirm: "Are you sure ? "},
+						class: "btn btn-md btn-danger"%>
+        <% if signed_in? %>
+          <%= link_to 'Add To Cart  ', lineitems_path(book_id: @book), class: "btn btn-md btn-success pull-right", method: :post %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @book.price %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @book.category %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= @book.image %>
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<h2 align = "center">Reviews</h2>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <div class="well thumbnail">
+      <%= form_for([@book, Review.new]) do |f| %>
+      <h3>
+        <%= f.label :stars %>
+        <% stars = [1, 2, 3, 4, 5] %>
+        <% stars.each do |star| %>
+          <%= f.radio_button :stars, star %> <%= star %>
+      <%end %>
+      <h3>
+      </br>
+      <%= f.text_area :comment, :rows => 8, :cols => 73 %>
+      <div class="form-group"> </br>
+        <%= f.submit class: 'btn btn-primary btn-lg' %>
+      </div>
+      <% end %>
+    </div>
+    <div class="caption">
+      <% if @book.reviews.empty? %>
+      <h3> There is no reviews for this <%= @book.title %></h3>
+      <% else %>
+      <h2 class = "center"> what others felt about this <% @book.title %></h2>
+    </div>
+    <div class="cont">
+      <h2><% @book.reviews.reverse.each do |rev| %></h2>
+      <div class="panel-body well">
+        <p><h3> <% @rev.comment %></h3><h5 align = "right">Posted <% time_ago_in_words (rev.created_at) %> ago by: ' <%= rev.user.name %>'</h5></p>
+      </div>
+      <% end %>
+    </div>
+    <% end %>
+  </div>
+</div>
