--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="wrapper">
+  	<%= render 'layouts/nav' %>
+  	<%= render 'layouts/messages' %>
+  	<div class = "container" >
+  		<%= yield %>
+  	</div>
+  	<%= render 'layouts/footer' %>
+  	<% debug(params) if Rails.env.development? %>
+  	</div>
 </body>
 </html>
