--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,25 +1,13 @@
-<%= form_for(@order) do |f| %>
-  <% if @order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+<%= render 'shared/errors', object: @order %>
 
-      <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class ='row'>
+    <%= form_for(@order, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+
+    <div class="form-group">
+      <div class="col-sm-8 control-label">
+        <%= f.collection_select :shipping_and_payment_id, ShippingAndPayment.all, :id, :card_number, {prompt: "select a payment and shipping account"}, {class: "form-control"} %></br></br>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :total %><br>
-    <%= f.text_field :total %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+        <%= f.submit class: 'btn btn-primary btn-lg'%>
+    <% end %>
+</div>
