--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,33 +1,63 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= render 'shared/errors', object: @user %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class ='row'>
+  <div class = 'col-xs-12'>
+    <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :name %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :name, class: "form-control",  placeholder: "Name", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :password %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :password, class: "form-control",  placeholder: "password", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :password_confirmation %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :password_confirmation, class: "form-control",  placeholder: "password confermation", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :email %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :email, class: "form-control",  placeholder: "Email", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :dob %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.date_field :dob, class: "form-control", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-2">
+          <%= f.submit class: 'btn btn-primary btn-lg'%>
+  	    </div>
+        <div class="col-xs-4 col-xs-offset-2">
+          <%= link_to 'Go Back', books_path, class: "btn btn-danger btn-lg pull-right"%>
+        </div>
+      </div>
+
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.text_field :password_digest %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :dob %><br>
-    <%= f.datetime_select :dob %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
