fix order method and add some patterns

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,6 +40,7 @@ body {
 }
 textarea {
   resize: none;
+	color: black;
 }
 #logo {
 	float: left;
@@ -118,12 +119,12 @@ textarea {
 	color: inherit;
 }
 .product-title :hover {
-	 text-decoration:none;
-	 background-color: inherit;
-	}
+	text-decoration:none;
+	background-color: inherit;
+}
 .product-title :visited {
-    text-decoration: none;
-    decoration: none;
+  text-decoration: none;
+  decoration: none;
 }
 .product-body {
 	border-top: 1px solid #eaeaea;
@@ -131,17 +132,17 @@ textarea {
 	padding-bottom: 15px;
  }
  .listing {
-	 list-style: none;
-	 padding-left: 0;
+	list-style: none;
+	padding-left: 0;
  }
  .well {
-	 background-color: #4f4f4f;
-	 color: white;
-	 font-weight: lighter;
+	background-color: #4f4f4f;
+	color: white;
+	font-weight: lighter;
  }
  .well_categories {
- 	 background-color: #b7b187;
-	 color: white;
+ 	background-color: #b7b187;
+	color: white;
  }
  .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
   color: white;
