--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -41,19 +41,27 @@
       </div>
       <% end %>
     </div>
+    <div class="well">
+
+      <h3>Star Rating</h3> </br>
+        <p>
+        <h4> <b><%= number_with_precision(@book.average_stars, precision: 0) %> </b> &nbsp;stars </h4>
+        </p>
+      </div>
     <div class="caption">
       <% if @book.reviews.empty? %>
       <h3> There is no reviews for this <%= @book.title %></h3>
       <% else %>
-      <h2 class = "center"> what others felt about this <% @book.title %></h2>
+      <h2 class = "center"> Customers comments <% @book.title %></h2>
     </div>
     <div class="cont">
-      <h2><% @book.reviews.reverse.each do |rev| %></h2>
+      <h2><% @book.reviews.reverse.each do |review| %></h2>
       <div class="panel-body well">
-        <p><h3> <% @rev.comment %></h3><h5 align = "right">Posted <% time_ago_in_words (rev.created_at) %> ago by: ' <%= rev.user.name %>'</h5></p>
+        <p><h3> <%= review.comment %></h3><h5 align = "right">Posted <%= time_ago_in_words (review.created_at) %> ago by: ' <%= review.user.name %>'</h5></p>
       </div>
       <% end %>
     </div>
     <% end %>
   </div>
+</div>
 </div>
