--- a/app/views/lineitems/_form.html.erb
+++ b/app/views/lineitems/_form.html.erb
@@ -15,10 +15,10 @@
     <%= f.label :book_id %><br>
     <%= f.number_field :book_id %>
   </div>
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :order_id %><br>
     <%= f.number_field :order_id %>
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :quantity %><br>
     <%= f.number_field :quantity %>
