--- a/app/views/lineitems/show.html.erb
+++ b/app/views/lineitems/show.html.erb
@@ -2,18 +2,17 @@
 
 <p>
   <strong>Book:</strong>
-  <%= @lineitem.book_id %>
+  <%= @lineitem.book.title %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @lineitem.quantity %>
+  <%= @lineitem.quantity%>
 </p>
 
-<p>
+<!-- <p>
   <strong>Cart:</strong>
   <%= @lineitem.cart_id %>
-</p>
-
-<%= link_to 'Edit', edit_lineitem_path(@lineitem) %> |
-<%= link_to 'Back', lineitems_path %>
+</p> -->
+<%= link_to 'Continue to Cart', cart_path(@lineitem.cart_id), class: "btn btn-lg btn-success" %>
+<%= link_to 'Continue Shopping', books_path, class: "btn btn-lg btn-primary" %>
