--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,10 +6,19 @@
 
       <div class="form-group">
         <div class="control-label col-sm-2">
-          <%= f.label :name %>
+          <%= f.label :name, "First Name" %>
         </div>
         <div class="col-sm-8">
-          <%= f.text_field :name, class: "form-control",  placeholder: "Name", autofocus: true  %>
+          <%= f.text_field :name, class: "form-control",  placeholder: "First Name", autofocus: true  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :l_name, "Last Name" %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :l_name, class: "form-control",  placeholder: "Last Name", autofocus: true  %>
         </div>
       </div>
 
