--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Password digest</th>
+      <th>Full Name</th>
       <th>Email</th>
       <th>Dob</th>
       <th colspan="3"></th>
@@ -16,8 +15,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
-        <td><%= user.password_digest %></td>
+        <td><%= user.decorate.full_name %></td>
         <td><%= user.email %></td>
         <td><%= user.dob %></td>
         <td><%= link_to 'Show', user %></td>
