--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,10 +10,12 @@
       </div>
       <div class="product-action">
         <%= link_to 'View all books', books_path, class: "btn btn-md btn-success" %>
-        <%= link_to 'Edit this book', edit_book_path(@book), class: "btn btn-md btn-primary" %>
-			  <%= link_to 'Delete this product', book_path(@book), method: :delete,
+        <% if signed_in? and @current_user.admin? %>
+          <%= link_to 'Edit this book', edit_book_path(@book), class: "btn btn-md btn-primary" %>
+			       <%= link_to 'Delete this product', book_path(@book), method: :delete,
 						data: {confirm: "Are you sure ? "},
 						class: "btn btn-md btn-danger"%>
+        <% end %>
         <% if signed_in? %>
           <%= link_to 'Add To Cart  ', lineitems_path(book_id: @book), class: "btn btn-md btn-success pull-right", method: :post %>
         <% end %>
