--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,19 +16,28 @@
       <ul class="nav navbar-nav">
         <li> <%= link_to "Books", books_path, id: "logo"%><li>
 
-            <li><%= link_to "Users", users_path, id: "logo"%></li>
+        <% if signed_in? and @current_user.admin? %>
+          <li><%= link_to "Users", users_path, id: "logo"%></li>
 
-         	<li class="dropdown" , id= "logo">
-        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false", id= "logo">Actions<span class="caret"></span></a>
+         	  <li class="dropdown" , id= "logo">
+        	  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false", id= "logo">Actions<span class="caret"></span></a>
           	  <ul class="dropdown-menu">
           	  <li><%= link_to "New Book", new_book_path%></li>
           	  <li role="separator" class="divider"></li>
           	</ul>
         </li>
+        <% end %>
       </ul>
-      <div id = "search">
-        <%= render 'books/search' %>
-      </div>
+        <% if signed_in? and @current_user.admin? %>
+          <div id = "search" class = "col-sm-offset-4">
+              <%= render 'books/search' %>
+          </div>
+        <% end %>
+        <% if signed_in? and !@current_user.admin? %>
+        <div id = "search" class = "col-sm-offset-4">
+            <%= render 'books/search' %>
+        </div>
+        <% end %>
       <ul class="nav navbar-nav navbar-right">
   <% if !signed_in? %>
 		<li><%= link_to "Sign in", login_path , id:"logo"%></li>
