--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,39 @@
 <h1>Editing User</h1>
+<% if signed_in? and !@current_user.admin? %>
+  <%= render 'form' %>
+<% elsif signed_in? and @current_user.admin? %>
+<%= render 'shared/errors', object: @user %>
 
-<%= render 'form' %>
+<div class ='row'>
+  <div class = 'col-xs-12'>
+    <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <div class="row">
+  <div class="well col-xs-6 col-xs-offset-4 center">
+    <p></br>Full Name : <%= @user.full_name %></p>
+    <p></br>Email : <%= @user.email %></p>
+    <p></br>date of birth : <%= @user.dob.strftime("%d/%m/%Y")%></p></br>
+
+
+    <div class="form-group">
+      <div class="control-label col-sm-3">
+        <%= f.label :admin, "add as admin" %>
+      </div>
+      <div class="col-sm-1 col-sm-offset-1">
+        <%= f.check_box :admin?, class: 'form-control', autofocus: true%>
+      </div>
+    </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-2">
+          <%= f.submit class: 'btn btn-primary btn-lg'%>
+        </div>
+        <div class="col-xs-4 col-xs-offset-2">
+          <%= link_to 'Go Back', books_path, class: "btn btn-danger btn-lg pull-right"%>
+        </div>
+      </div>
+
+      <% end %>
+  </div>
+</div>
+<% end %>
