--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Full Name</th>
-      <th>Email</th>
-      <th>Dob</th>
+      <th>Full Name &nbsp;&nbsp;</th>
+      <th>Email &nbsp;&nbsp;&nbsp;</th>
+      <th>Dob &nbsp;&nbsp;</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,11 +16,16 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.decorate.full_name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.dob %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= user.email %>&nbsp;</td>
+        <td><%= user.dob.strftime("%d/%m/%Y") %>&nbsp;</td>
+        <td><%= link_to 'Show', user, class: "btn btn-danger btn-sm pull-right" %>&nbsp;</td>
+        <% if signed_in? and @current_user.admin? %>
+        <td><%= link_to 'add admin', edit_user_path(user), class: "btn btn-danger btn-sm pull-right" %>&nbsp;</td>
+        <% end %>
+        <% if signed_in? and !@current_user.admin? %>
+        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-danger btn-sm pull-right" %>&nbsp;</td>
+        <% end %>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-sm pull-right" %>&nbsp;</td>
       </tr>
     <% end %>
   </tbody>
